// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> renders 1`] = `
<div>
  <i
    aria-hidden="true"
    class="co-icon"
    data-co-name="Icon"
    data-co-project="cobalt"
    data-co-version="test-version"
  >
    code
  </i>
  <span
    class="sr-only"
    data-co-name="Icon"
    data-co-project="cobalt"
    data-co-version="test-version"
  />
</div>
`;

exports[`<Icon /> renders a clickable icon 1`] = `
<div>
  <button
    class="co-icon--clickable"
    data-co-name="Icon"
    data-co-project="cobalt"
    data-co-version="test-version"
  >
    <i
      aria-hidden="true"
      class="co-icon"
    >
      code
    </i>
    <span
      class="sr-only"
    />
  </button>
</div>
`;
